# typing-exe

./: .readthedocs.yaml  404.html  LICENSE  README-PyPI.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  search.html  sitemap.xml  test.sh
.github/workflows/: tests.yml
assert/: index.html
cleanup_annotations/: index.html
docs/: Assert.md  assert.md  cleanup_annotations.md  early_return.md  execute_annotations.md  index.md  index.rst  modify.md  parameter_data.md  quickstart.md  requirements.txt  sequence.md
documentation/: mkdocs.yml
documentation/docs/typing-exe/annotations/: Assert.md
early_return/: index.html
execute_annotations/: index.html
modify/: index.html
parameter_data/: index.html
quickstart/: index.html
search/: search_index.json
sequence/: index.html
src/parameter_checks/: __init__.py  annotations.py  annotations.pyi  enforce.py  hints.py
src/typing_exe/: __init__.py  annotations.py  annotations.pyi  decorators.py  early_return.py  hints.py  parameter_data.py  util.py
tests/: experiments.py  mypy_test_target.py  test_annotations.py  test_enforce_checks.py  test_hints_cleanup.py  test_hints_enforce.py  test_other.py  test_threading.py
typing-exe/annotations/Assert/: index.html
typing-exe/annotations/Modify/: index.html
typing-exe/annotations/Sequence/: index.html
typing-exe/decorators/cleanup_annotations/: index.html
typing-exe/decorators/execute_annotations/: index.html
typing-exe/early_return/EarlyReturn/: index.html
typing-exe/parameter_data/ParameterData/: index.html
