[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parameter-checks"
version = "0.1.2"
authors = [{name="Sebastian Müller"}, {email="sebastian.nicolas.mueller@gmail.com"}]
description = "Extend typehints to include dynamic checks (that might otherwise be dealt with by assertions) in Python."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["parameters", "return-values", "checks", "types", "dynamic", "decorator", "typehint"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.license]
file = "LICENCE"


[project.urls]
repository = "https://github.com/snimu/parameter-checks"

[tool.setuptools.packages.find]
where = ["src"]
include = ["parameter_checks*"]
exclude = ["venv", "tests", ".*", "*.md"]

[tool.coverage.run]
source = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=parameter_checks"
testpaths = [
    "tests",
]
